refactor: 베이스코드로 코드 교체